# DJGP_

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  run_synthetic.py  run_uci.py
data/: OHTDataset.mat
docs/: cem_em_projection.md  dmgp_local_residual_selfcem.md  experiments_log.md  five_seed_results_summary.md  five_seed_results_total_table.csv  five_seed_results_total_table.md  global_z_supervised_jgp_plan_cn.md  graph_local_djgp_experiment_plan.md  ism_lmjgp_analytic.md  lmjgp_cem_improvements_summary.md  lmjgp_elbo_diagnostics_summary.md  neighborhood_retrieval_hypothesis_experiment_plan_cn.md  original_elbo_direct_prediction_analysis.md  paper_code_map.md  pdebench_burgers_surrogate.md  pr_adjpgp_method_revised.md  projection_methods_math.md  refactor_plan.md  repository_map.md  residual_ablation.md  uci_smalltrain_summary.md  uncertain_w_djgp_method.md  uncertain_w_jgp_marginalization.md  w_learning_ablation_plan_cn.md
experiments/: README.md  __init__.py
experiments/active_learning/: README.md  __init__.py  run_synth_al4jgp.py  run_synth_and_plot_acq.py  run_synth_and_plot_acq_v2.py
experiments/diagnostics/: README.md  run_projection_w_diagnostics.py
legacy/: README.md
scripts/: scripts_lh_l2_seed0_jgp_on_z.py  scripts_lh_l2_seed0_overlap_only.py  simulate_case_d_linear.py  try_new_JGP.py
src/djgp/: api.py  (+14 more)
tests/: __init__.py  smoke_utils.py  test_imports.py  test_pdebench_inspect.py  test_pdebench_runner.py  test_pdebench_surrogate.py  test_smoke_djgp.py  test_smoke_ism_lmjgp.py  test_smoke_jumpgp.py  test_uncertain_w_jgp.py
(+1994 files in other folders)
